--- a/note/shell.html
+++ b/note/shell.html
@@ -59,14 +59,21 @@
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/sh.html">Bourne Shell</a></h2>
+<h2><a class="article-link-title" href="/note/cli.html">CLI</a></h2>
 <div class="article-link-date">
-2020년 4월 13일 수정</div>
+2020년 4월 14일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/cli.html">CLI</a></h2>
+<h2><a class="article-link-title" href="/note/kubectl.html">kubectl</a></h2>
+<div class="article-link-date">
+2020년 4월 14일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/sh.html">Bourne Shell</a></h2>
 <div class="article-link-date">
 2020년 4월 13일 수정</div>
 </div>
