--- a/index.html
+++ b/index.html
@@ -52,6 +52,34 @@
 <h1>NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/git.html">Git</a></h2>
+<div class="article-link-date">
+2020년 4월 14일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/css.html">CSS</a></h2>
+<div class="article-link-date">
+2020년 4월 14일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/cli.html">CLI</a></h2>
+<div class="article-link-date">
+2020년 4월 14일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/kubectl.html">kubectl</a></h2>
+<div class="article-link-date">
+2020년 4월 14일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/shell.html">셸</a></h2>
 <div class="article-link-date">
 2020년 4월 13일 수정</div>
@@ -73,21 +101,7 @@
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/css.html">CSS</a></h2>
-<div class="article-link-date">
-2020년 4월 13일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/caffeinate.html">caffeinate</a></h2>
-<div class="article-link-date">
-2020년 4월 13일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/cli.html">CLI</a></h2>
 <div class="article-link-date">
 2020년 4월 13일 수정</div>
 </div>
