update invalid canonical url

--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -45,11 +45,11 @@
 <div id="table-of-contents">
 <h2><img src="/static/icon-toc.svg" />목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org67bd700">사용법</a>
+<li><a href="#org8c0d7cb">사용법</a>
 <ul>
-<li><a href="#orgbd9bf19">무제한 잠자기 방지</a></li>
-<li><a href="#org4f2de03">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#org9b44f98">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#org3239b27">무제한 잠자기 방지</a></li>
+<li><a href="#org209ea0a">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#org6a1c480">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -60,13 +60,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org67bd700" class="outline-2">
-<h2 id="org67bd700">사용법</h2>
-<div class="outline-text-2" id="text-org67bd700">
+<div id="outline-container-org8c0d7cb" class="outline-2">
+<h2 id="org8c0d7cb">사용법</h2>
+<div class="outline-text-2" id="text-org8c0d7cb">
 </div>
-<div id="outline-container-orgbd9bf19" class="outline-3">
-<h3 id="orgbd9bf19">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-orgbd9bf19">
+<div id="outline-container-org3239b27" class="outline-3">
+<h3 id="org3239b27">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org3239b27">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -77,9 +77,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org4f2de03" class="outline-3">
-<h3 id="org4f2de03">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org4f2de03">
+<div id="outline-container-org209ea0a" class="outline-3">
+<h3 id="org209ea0a">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org209ea0a">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -90,9 +90,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org9b44f98" class="outline-3">
-<h3 id="org9b44f98">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org9b44f98">
+<div id="outline-container-org6a1c480" class="outline-3">
+<h3 id="org6a1c480">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org6a1c480">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
