--- a/note/index.html
+++ b/note/index.html
@@ -9,8 +9,8 @@
 <meta name="description" content="NOTE의 최근 업데이트된 글" />
 <meta name="twitter:description" content="NOTE의 최근 업데이트된 글" />
 <meta name="og:description" content="NOTE의 최근 업데이트된 글" />
-<link rel="canonical" href="https://seorenn.github.io/" />
-<meta property="og:url" content="https://seorenn.github.io/" />
+<link rel="canonical" href="https://seorenn.github.io/note/" />
+<meta property="og:url" content="https://seorenn.github.io/note/" />
 <link rel="alternate" type="application/rss+xml" title="Seorenn Note Feeds" href="/rss.xml"/>
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="/img/seorenn-logo.png" />
