--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
 <h1>POST의 최신 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/post/weird-github-page.html">왜 GitHub Pages의 일부 글이 나타나지 않았을까?</a></h2>
+<div class="article-link-date">
+2020년 4월 14일 작성</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/post/seorenn-publish.html">정적 사이트 생성을 위한 개인적인 욕망의 분출(?)</a></h2>
 <div class="article-link-date">
 2020년 4월 13일 작성</div>
