update google analytics

--- a/note/sh.html
+++ b/note/sh.html
@@ -24,7 +24,16 @@
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-<meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" /><meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" /></head>
+<meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
+<meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+</head>
 <body>
 <header class="top-header">
 <div class="logo-container">
@@ -45,27 +54,27 @@
 <div id="table-of-contents">
 <h2><img src="/static/icon-toc.svg" />목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org215fb88">소개</a></li>
-<li><a href="#org14f48db">스크립팅 노트</a>
+<li><a href="#org70525a9">소개</a></li>
+<li><a href="#orgbc70791">스크립팅 노트</a>
 <ul>
-<li><a href="#org28dd951">실행 가능한 스크립트</a></li>
-<li><a href="#org05255b5">if</a></li>
-<li><a href="#orgc10f073">루프</a></li>
-<li><a href="#org7fa3396">조건식 오퍼레이터</a></li>
-<li><a href="#orgcbac6d9">디렉토리 존재 유무 체크</a></li>
-<li><a href="#org238a440">파일 개수</a></li>
-<li><a href="#org0931861">와일드카드 인자 처리</a></li>
-<li><a href="#org74518ac">에러가 나면 멈추게 하기</a></li>
-<li><a href="#org5dae4d2">에러 메시지 숨기기</a></li>
+<li><a href="#orgec77ff2">실행 가능한 스크립트</a></li>
+<li><a href="#org07a1e0c">if</a></li>
+<li><a href="#orgcea96a5">루프</a></li>
+<li><a href="#orga203a28">조건식 오퍼레이터</a></li>
+<li><a href="#orgc47bff2">디렉토리 존재 유무 체크</a></li>
+<li><a href="#orgb98f62c">파일 개수</a></li>
+<li><a href="#org13f020e">와일드카드 인자 처리</a></li>
+<li><a href="#orga1451f1">에러가 나면 멈추게 하기</a></li>
+<li><a href="#org81d2709">에러 메시지 숨기기</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org215fb88" class="outline-2">
-<h2 id="org215fb88">소개</h2>
-<div class="outline-text-2" id="text-org215fb88">
+<div id="outline-container-org70525a9" class="outline-2">
+<h2 id="org70525a9">소개</h2>
+<div class="outline-text-2" id="text-org70525a9">
 <p>
 <code>sh</code> 는 Bourne Shell의 축약된 이름으로
 유닉스에서 가장 기본적으로 쓰이던 <a href="shell.html">셸</a> 이다.
@@ -74,16 +83,16 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org14f48db" class="outline-2">
-<h2 id="org14f48db">스크립팅 노트</h2>
-<div class="outline-text-2" id="text-org14f48db">
+<div id="outline-container-orgbc70791" class="outline-2">
+<h2 id="orgbc70791">스크립팅 노트</h2>
+<div class="outline-text-2" id="text-orgbc70791">
 <p>
 전반적인 기준 없이 그냥 메모 단위로 기록되는 팁이다.
 </p>
 </div>
-<div id="outline-container-org28dd951" class="outline-3">
-<h3 id="org28dd951">실행 가능한 스크립트</h3>
-<div class="outline-text-3" id="text-org28dd951">
+<div id="outline-container-orgec77ff2" class="outline-3">
+<h3 id="orgec77ff2">실행 가능한 스크립트</h3>
+<div class="outline-text-3" id="text-orgec77ff2">
 <p>
 일반적으로 셸 스크립트를 만들면 셸을 통해서 실행하는 것이 보통이다.
 </p>
@@ -144,9 +153,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org05255b5" class="outline-3">
-<h3 id="org05255b5">if</h3>
-<div class="outline-text-3" id="text-org05255b5">
+<div id="outline-container-org07a1e0c" class="outline-3">
+<h3 id="org07a1e0c">if</h3>
+<div class="outline-text-3" id="text-org07a1e0c">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #51afef;">if</span> <span style="color: #51afef;">[</span> condition <span style="color: #51afef;">]</span>
 <span style="color: #51afef;">then</span>
@@ -185,9 +194,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc10f073" class="outline-3">
-<h3 id="orgc10f073">루프</h3>
-<div class="outline-text-3" id="text-orgc10f073">
+<div id="outline-container-orgcea96a5" class="outline-3">
+<h3 id="orgcea96a5">루프</h3>
+<div class="outline-text-3" id="text-orgcea96a5">
 <p>
 <code>for</code> 문을 이용한 현대적인(?) 루프는 아래처럼 쓸 수 있다.
 </p>
@@ -204,9 +213,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org7fa3396" class="outline-3">
-<h3 id="org7fa3396">조건식 오퍼레이터</h3>
-<div class="outline-text-3" id="text-org7fa3396">
+<div id="outline-container-orga203a28" class="outline-3">
+<h3 id="orga203a28">조건식 오퍼레이터</h3>
+<div class="outline-text-3" id="text-orga203a28">
 <ul class="org-ul">
 <li><code>=</code>, <code>!=</code> 문자열이 동일한지, 동일하지 않은지</li>
 <li><code>-eq</code>, <code>-ne</code>, <code>-gt</code>, <code>-ge</code>, <code>-lt</code>, <code>-le</code> 차례대로 equal, not equal, greater
@@ -221,9 +230,9 @@ than, greater than or equal, less than, less than or equal</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgcbac6d9" class="outline-3">
-<h3 id="orgcbac6d9">디렉토리 존재 유무 체크</h3>
-<div class="outline-text-3" id="text-orgcbac6d9">
+<div id="outline-container-orgc47bff2" class="outline-3">
+<h3 id="orgc47bff2">디렉토리 존재 유무 체크</h3>
+<div class="outline-text-3" id="text-orgc47bff2">
 <p>
 위에서도 정리했지만 <code>-d</code> 플래그를 쓸 수 있다.
 </p>
@@ -238,9 +247,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org238a440" class="outline-3">
-<h3 id="org238a440">파일 개수</h3>
-<div class="outline-text-3" id="text-org238a440">
+<div id="outline-container-orgb98f62c" class="outline-3">
+<h3 id="orgb98f62c">파일 개수</h3>
+<div class="outline-text-3" id="text-orgb98f62c">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #dcaeea;">COUNT</span>=$<span style="color: #51afef;">(</span><span style="color: #ECBE7B;">ls</span> /foo/bar | wc -l<span style="color: #51afef;">)</span>
 </pre>
@@ -264,9 +273,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org0931861" class="outline-3">
-<h3 id="org0931861">와일드카드 인자 처리</h3>
-<div class="outline-text-3" id="text-org0931861">
+<div id="outline-container-org13f020e" class="outline-3">
+<h3 id="org13f020e">와일드카드 인자 처리</h3>
+<div class="outline-text-3" id="text-org13f020e">
 <p>
 셸 스크립트에 <code>*.ext</code> 같은 파일 이름 와일드카드를 넘겼을 때
 이를 나열하는 방법을 for 커맨드로 표현하면 이렇다.
@@ -284,9 +293,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org74518ac" class="outline-3">
-<h3 id="org74518ac">에러가 나면 멈추게 하기</h3>
-<div class="outline-text-3" id="text-org74518ac">
+<div id="outline-container-orga1451f1" class="outline-3">
+<h3 id="orga1451f1">에러가 나면 멈추게 하기</h3>
+<div class="outline-text-3" id="text-orga1451f1">
 <p>
 셸 스크립트 상단에 아래 한 줄을 넣어두면 에러가 났을 때 스크립트가 멈춘다.
 </p>
@@ -296,9 +305,9 @@ than, greater than or equal, less than, less than or equal</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org5dae4d2" class="outline-3">
-<h3 id="org5dae4d2">에러 메시지 숨기기</h3>
-<div class="outline-text-3" id="text-org5dae4d2">
+<div id="outline-container-org81d2709" class="outline-3">
+<h3 id="org81d2709">에러 메시지 숨기기</h3>
+<div class="outline-text-3" id="text-org81d2709">
 <p>
 에러 메시지는 <code>stderr</code> (2) 파이프로 전달되니 이것을 지옥의 쓰레기통(?)에 던지면 된다.
 </p>
