--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -24,7 +24,16 @@
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-<meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" /><meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" /></head>
+<meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
+<meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+</head>
 <body>
 <header class="top-header">
 <div class="logo-container">
@@ -45,11 +54,11 @@
 <div id="table-of-contents">
 <h2><img src="/static/icon-toc.svg" />목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org8c0d7cb">사용법</a>
+<li><a href="#org8a7b68a">사용법</a>
 <ul>
-<li><a href="#org3239b27">무제한 잠자기 방지</a></li>
-<li><a href="#org209ea0a">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#org6a1c480">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#orgc1c2834">무제한 잠자기 방지</a></li>
+<li><a href="#org9258d39">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#org021f73b">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -60,13 +69,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org8c0d7cb" class="outline-2">
-<h2 id="org8c0d7cb">사용법</h2>
-<div class="outline-text-2" id="text-org8c0d7cb">
+<div id="outline-container-org8a7b68a" class="outline-2">
+<h2 id="org8a7b68a">사용법</h2>
+<div class="outline-text-2" id="text-org8a7b68a">
 </div>
-<div id="outline-container-org3239b27" class="outline-3">
-<h3 id="org3239b27">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org3239b27">
+<div id="outline-container-orgc1c2834" class="outline-3">
+<h3 id="orgc1c2834">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-orgc1c2834">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -77,9 +86,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org209ea0a" class="outline-3">
-<h3 id="org209ea0a">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org209ea0a">
+<div id="outline-container-org9258d39" class="outline-3">
+<h3 id="org9258d39">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org9258d39">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -90,9 +99,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org6a1c480" class="outline-3">
-<h3 id="org6a1c480">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org6a1c480">
+<div id="outline-container-org021f73b" class="outline-3">
+<h3 id="org021f73b">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org021f73b">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
