--- a/note/macos.html
+++ b/note/macos.html
@@ -24,7 +24,16 @@
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-<meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" /><meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" /></head>
+<meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" />
+<meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" />
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44534026-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'UA-44534026-1');
+</script>
+</head>
 <body>
 <header class="top-header">
 <div class="logo-container">
@@ -45,9 +54,9 @@
 <div id="table-of-contents">
 <h2><img src="/static/icon-toc.svg" />목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org276def7">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#org4820ec2">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org834f8e5">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#orgdc00f5a">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#orgf3aa376">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#org35e81a2">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -72,17 +81,17 @@ macOS는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org276def7" class="outline-2">
-<h2 id="org276def7">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org276def7">
+<div id="outline-container-orgdc00f5a" class="outline-2">
+<h2 id="orgdc00f5a">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-orgdc00f5a">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-org4820ec2" class="outline-2">
-<h2 id="org4820ec2">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-org4820ec2">
+<div id="outline-container-orgf3aa376" class="outline-2">
+<h2 id="orgf3aa376">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-orgf3aa376">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -102,9 +111,9 @@ macOS는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org834f8e5" class="outline-2">
-<h2 id="org834f8e5">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org834f8e5">
+<div id="outline-container-org35e81a2" class="outline-2">
+<h2 id="org35e81a2">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-org35e81a2">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
