update some styles

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ gtag('config', 'UA-44534026-1');
 <body>
 <header class="top-header">
 <div class="logo-container">
-<img class="site-logo" src="/static/seorenn-logo.png" />
+<a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
 <nav>
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
@@ -48,7 +48,7 @@ gtag('config', 'UA-44534026-1');
 <hr/>
 <section class="content">
 <div class="summary-container">
-<h1>POST의 최신 글</h1>
+<h1>❏ POST의 최신 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/post/weird-github-page.html">왜 GitHub Pages의 일부 글이 나타나지 않았을까?</a></h2>
@@ -65,7 +65,7 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 <div class="summary-container">
-<h1>NOTE에서 최근 업데이트된 글</h1>
+<h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/git.html">Git</a></h2>
