--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -37,7 +37,7 @@ gtag('config', 'UA-44534026-1');
 <body>
 <header class="top-header">
 <div class="logo-container">
-<img class="site-logo" src="/static/seorenn-logo.png" />
+<a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
 <nav>
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
@@ -52,13 +52,13 @@ gtag('config', 'UA-44534026-1');
 <div class="title-date">2020년 4월 13일 수정</div>
 </header>
 <div id="table-of-contents">
-<h2><img src="/static/icon-toc.svg" />목차 (Table of Contents)</h2><div id="text-table-of-contents">
+<h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org8a7b68a">사용법</a>
+<li><a href="#org6e96370">사용법</a>
 <ul>
-<li><a href="#orgc1c2834">무제한 잠자기 방지</a></li>
-<li><a href="#org9258d39">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#org021f73b">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#orge728637">무제한 잠자기 방지</a></li>
+<li><a href="#org4399cb9">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#orgabe5bb8">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -69,13 +69,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org8a7b68a" class="outline-2">
-<h2 id="org8a7b68a">사용법</h2>
-<div class="outline-text-2" id="text-org8a7b68a">
+<div id="outline-container-org6e96370" class="outline-2">
+<h2 id="org6e96370">사용법</h2>
+<div class="outline-text-2" id="text-org6e96370">
 </div>
-<div id="outline-container-orgc1c2834" class="outline-3">
-<h3 id="orgc1c2834">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-orgc1c2834">
+<div id="outline-container-orge728637" class="outline-3">
+<h3 id="orge728637">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-orge728637">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -86,9 +86,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org9258d39" class="outline-3">
-<h3 id="org9258d39">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org9258d39">
+<div id="outline-container-org4399cb9" class="outline-3">
+<h3 id="org4399cb9">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org4399cb9">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -99,9 +99,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org021f73b" class="outline-3">
-<h3 id="org021f73b">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org021f73b">
+<div id="outline-container-orgabe5bb8" class="outline-3">
+<h3 id="orgabe5bb8">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-orgabe5bb8">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
