--- a/note/macos.html
+++ b/note/macos.html
@@ -37,7 +37,7 @@ gtag('config', 'UA-44534026-1');
 <body>
 <header class="top-header">
 <div class="logo-container">
-<img class="site-logo" src="/static/seorenn-logo.png" />
+<a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
 <nav>
 <a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
 <a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
@@ -52,11 +52,11 @@ gtag('config', 'UA-44534026-1');
 <div class="title-date">2020년 4월 13일 수정</div>
 </header>
 <div id="table-of-contents">
-<h2><img src="/static/icon-toc.svg" />목차 (Table of Contents)</h2><div id="text-table-of-contents">
+<h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgdc00f5a">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#orgf3aa376">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org35e81a2">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#orgf5b8709">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#org6deb857">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#orge7893cb">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -81,17 +81,17 @@ macOS는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-orgdc00f5a" class="outline-2">
-<h2 id="orgdc00f5a">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-orgdc00f5a">
+<div id="outline-container-orgf5b8709" class="outline-2">
+<h2 id="orgf5b8709">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-orgf5b8709">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-orgf3aa376" class="outline-2">
-<h2 id="orgf3aa376">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-orgf3aa376">
+<div id="outline-container-org6deb857" class="outline-2">
+<h2 id="org6deb857">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-org6deb857">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -111,9 +111,9 @@ macOS는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org35e81a2" class="outline-2">
-<h2 id="org35e81a2">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org35e81a2">
+<div id="outline-container-orge7893cb" class="outline-2">
+<h2 id="orge7893cb">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-orge7893cb">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
