--- a/note/index.html
+++ b/note/index.html
@@ -13,8 +13,8 @@
 <meta property="og:url" content="https://seorenn.github.io/note/" />
 <link rel="alternate" type="application/rss+xml" title="Seorenn Note Feeds" href="/rss.xml"/>
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
-<meta name="twitter:image"content="/img/seorenn-logo.png" />
-<meta property="og:image" content="/img/seorenn-logo.png" />
+<meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-logo.png" />
+<meta property="og:image" content="https://seorenn.github.io/static/seorenn-logo.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@seorenn" />
 <meta name="twitter:creator" content="@seorenn" />
