update image and social card

--- a/note/macos.html
+++ b/note/macos.html
@@ -13,8 +13,8 @@
 <meta property="og:url" content="https://seorenn.github.io/note/macos.html" />
 <link rel="alternate" type="application/rss+xml" title="Seorenn Note Feeds" href="/rss.xml"/>
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
-<meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-logo.png" />
-<meta property="og:image" content="https://seorenn.github.io/static/seorenn-logo.png" />
+<meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
+<meta property="og:image" content="https://seorenn.github.io/static/seorenn-symbol.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@seorenn" />
 <meta name="twitter:creator" content="@seorenn" />
@@ -54,9 +54,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org6f3145f">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#org8f501d1">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org7f985c7">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org76a2fc5">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#orgc5b22e3">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#orgc99ab1b">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -81,17 +81,17 @@ macOS는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org6f3145f" class="outline-2">
-<h2 id="org6f3145f">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org6f3145f">
+<div id="outline-container-org76a2fc5" class="outline-2">
+<h2 id="org76a2fc5">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-org76a2fc5">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-org8f501d1" class="outline-2">
-<h2 id="org8f501d1">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-org8f501d1">
+<div id="outline-container-orgc5b22e3" class="outline-2">
+<h2 id="orgc5b22e3">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-orgc5b22e3">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -111,9 +111,9 @@ macOS는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org7f985c7" class="outline-2">
-<h2 id="org7f985c7">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org7f985c7">
+<div id="outline-container-orgc99ab1b" class="outline-2">
+<h2 id="orgc99ab1b">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-orgc99ab1b">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
