--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -13,8 +13,8 @@
 <meta property="og:url" content="https://seorenn.github.io/note/caffeinate.html" />
 <link rel="alternate" type="application/rss+xml" title="Seorenn Note Feeds" href="/rss.xml"/>
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
-<meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-logo.png" />
-<meta property="og:image" content="https://seorenn.github.io/static/seorenn-logo.png" />
+<meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
+<meta property="og:image" content="https://seorenn.github.io/static/seorenn-symbol.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@seorenn" />
 <meta name="twitter:creator" content="@seorenn" />
@@ -54,11 +54,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga538e03">사용법</a>
+<li><a href="#orge683cfd">사용법</a>
 <ul>
-<li><a href="#org402c84a">무제한 잠자기 방지</a></li>
-<li><a href="#org1cac285">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#org5631e30">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#org553fd78">무제한 잠자기 방지</a></li>
+<li><a href="#org769d3ed">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#orgf9e8a55">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -69,13 +69,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-orga538e03" class="outline-2">
-<h2 id="orga538e03">사용법</h2>
-<div class="outline-text-2" id="text-orga538e03">
+<div id="outline-container-orge683cfd" class="outline-2">
+<h2 id="orge683cfd">사용법</h2>
+<div class="outline-text-2" id="text-orge683cfd">
 </div>
-<div id="outline-container-org402c84a" class="outline-3">
-<h3 id="org402c84a">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org402c84a">
+<div id="outline-container-org553fd78" class="outline-3">
+<h3 id="org553fd78">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org553fd78">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -86,9 +86,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org1cac285" class="outline-3">
-<h3 id="org1cac285">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org1cac285">
+<div id="outline-container-org769d3ed" class="outline-3">
+<h3 id="org769d3ed">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org769d3ed">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -99,9 +99,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org5631e30" class="outline-3">
-<h3 id="org5631e30">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org5631e30">
+<div id="outline-container-orgf9e8a55" class="outline-3">
+<h3 id="orgf9e8a55">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-orgf9e8a55">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
