update opengraph image properties

--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -15,6 +15,8 @@
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
 <meta property="og:image" content="https://seorenn.github.io/static/seorenn-symbol.png" />
+<meta property="og:image:width" content="520" />
+<meta property="og:image:height" content="329" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@seorenn" />
 <meta name="twitter:creator" content="@seorenn" />
@@ -54,11 +56,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orge683cfd">사용법</a>
+<li><a href="#org9a40d48">사용법</a>
 <ul>
-<li><a href="#org553fd78">무제한 잠자기 방지</a></li>
-<li><a href="#org769d3ed">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#orgf9e8a55">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#org4d81244">무제한 잠자기 방지</a></li>
+<li><a href="#org6b1dc18">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#org06728a6">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -69,13 +71,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-orge683cfd" class="outline-2">
-<h2 id="orge683cfd">사용법</h2>
-<div class="outline-text-2" id="text-orge683cfd">
+<div id="outline-container-org9a40d48" class="outline-2">
+<h2 id="org9a40d48">사용법</h2>
+<div class="outline-text-2" id="text-org9a40d48">
 </div>
-<div id="outline-container-org553fd78" class="outline-3">
-<h3 id="org553fd78">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org553fd78">
+<div id="outline-container-org4d81244" class="outline-3">
+<h3 id="org4d81244">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org4d81244">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -86,9 +88,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org769d3ed" class="outline-3">
-<h3 id="org769d3ed">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org769d3ed">
+<div id="outline-container-org6b1dc18" class="outline-3">
+<h3 id="org6b1dc18">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org6b1dc18">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -99,9 +101,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-orgf9e8a55" class="outline-3">
-<h3 id="orgf9e8a55">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-orgf9e8a55">
+<div id="outline-container-org06728a6" class="outline-3">
+<h3 id="org06728a6">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org06728a6">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
