--- a/note/sh.html
+++ b/note/sh.html
@@ -15,6 +15,8 @@
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
 <meta property="og:image" content="https://seorenn.github.io/static/seorenn-symbol.png" />
+<meta property="og:image:width" content="520" />
+<meta property="og:image:height" content="329" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@seorenn" />
 <meta name="twitter:creator" content="@seorenn" />
@@ -54,27 +56,27 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org1b30e40">소개</a></li>
-<li><a href="#org1259bbf">스크립팅 노트</a>
+<li><a href="#org46f5cd5">소개</a></li>
+<li><a href="#org28515fb">스크립팅 노트</a>
 <ul>
-<li><a href="#org5271a5f">실행 가능한 스크립트</a></li>
-<li><a href="#orgf5cae8c">if</a></li>
-<li><a href="#orgc692133">루프</a></li>
-<li><a href="#orgbd25819">조건식 오퍼레이터</a></li>
-<li><a href="#orgd740795">디렉토리 존재 유무 체크</a></li>
-<li><a href="#org3fab12b">파일 개수</a></li>
-<li><a href="#org5f85e2d">와일드카드 인자 처리</a></li>
-<li><a href="#orgd47aafd">에러가 나면 멈추게 하기</a></li>
-<li><a href="#orgd5bb474">에러 메시지 숨기기</a></li>
+<li><a href="#orgfbd2303">실행 가능한 스크립트</a></li>
+<li><a href="#orgefac3e6">if</a></li>
+<li><a href="#org436d2bc">루프</a></li>
+<li><a href="#org7e550c7">조건식 오퍼레이터</a></li>
+<li><a href="#org7ecde81">디렉토리 존재 유무 체크</a></li>
+<li><a href="#orgda73194">파일 개수</a></li>
+<li><a href="#org0083710">와일드카드 인자 처리</a></li>
+<li><a href="#orgebd9b1e">에러가 나면 멈추게 하기</a></li>
+<li><a href="#org42282a9">에러 메시지 숨기기</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org1b30e40" class="outline-2">
-<h2 id="org1b30e40">소개</h2>
-<div class="outline-text-2" id="text-org1b30e40">
+<div id="outline-container-org46f5cd5" class="outline-2">
+<h2 id="org46f5cd5">소개</h2>
+<div class="outline-text-2" id="text-org46f5cd5">
 <p>
 <code>sh</code> 는 Bourne Shell의 축약된 이름으로
 유닉스에서 가장 기본적으로 쓰이던 <a href="shell.html">셸</a> 이다.
@@ -83,16 +85,16 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org1259bbf" class="outline-2">
-<h2 id="org1259bbf">스크립팅 노트</h2>
-<div class="outline-text-2" id="text-org1259bbf">
+<div id="outline-container-org28515fb" class="outline-2">
+<h2 id="org28515fb">스크립팅 노트</h2>
+<div class="outline-text-2" id="text-org28515fb">
 <p>
 전반적인 기준 없이 그냥 메모 단위로 기록되는 팁이다.
 </p>
 </div>
-<div id="outline-container-org5271a5f" class="outline-3">
-<h3 id="org5271a5f">실행 가능한 스크립트</h3>
-<div class="outline-text-3" id="text-org5271a5f">
+<div id="outline-container-orgfbd2303" class="outline-3">
+<h3 id="orgfbd2303">실행 가능한 스크립트</h3>
+<div class="outline-text-3" id="text-orgfbd2303">
 <p>
 일반적으로 셸 스크립트를 만들면 셸을 통해서 실행하는 것이 보통이다.
 </p>
@@ -153,9 +155,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orgf5cae8c" class="outline-3">
-<h3 id="orgf5cae8c">if</h3>
-<div class="outline-text-3" id="text-orgf5cae8c">
+<div id="outline-container-orgefac3e6" class="outline-3">
+<h3 id="orgefac3e6">if</h3>
+<div class="outline-text-3" id="text-orgefac3e6">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #51afef;">if</span> <span style="color: #51afef;">[</span> condition <span style="color: #51afef;">]</span>
 <span style="color: #51afef;">then</span>
@@ -194,9 +196,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc692133" class="outline-3">
-<h3 id="orgc692133">루프</h3>
-<div class="outline-text-3" id="text-orgc692133">
+<div id="outline-container-org436d2bc" class="outline-3">
+<h3 id="org436d2bc">루프</h3>
+<div class="outline-text-3" id="text-org436d2bc">
 <p>
 <code>for</code> 문을 이용한 현대적인(?) 루프는 아래처럼 쓸 수 있다.
 </p>
@@ -213,9 +215,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgbd25819" class="outline-3">
-<h3 id="orgbd25819">조건식 오퍼레이터</h3>
-<div class="outline-text-3" id="text-orgbd25819">
+<div id="outline-container-org7e550c7" class="outline-3">
+<h3 id="org7e550c7">조건식 오퍼레이터</h3>
+<div class="outline-text-3" id="text-org7e550c7">
 <ul class="org-ul">
 <li><code>=</code>, <code>!=</code> 문자열이 동일한지, 동일하지 않은지</li>
 <li><code>-eq</code>, <code>-ne</code>, <code>-gt</code>, <code>-ge</code>, <code>-lt</code>, <code>-le</code> 차례대로 equal, not equal, greater
@@ -230,9 +232,9 @@ than, greater than or equal, less than, less than or equal</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgd740795" class="outline-3">
-<h3 id="orgd740795">디렉토리 존재 유무 체크</h3>
-<div class="outline-text-3" id="text-orgd740795">
+<div id="outline-container-org7ecde81" class="outline-3">
+<h3 id="org7ecde81">디렉토리 존재 유무 체크</h3>
+<div class="outline-text-3" id="text-org7ecde81">
 <p>
 위에서도 정리했지만 <code>-d</code> 플래그를 쓸 수 있다.
 </p>
@@ -247,9 +249,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org3fab12b" class="outline-3">
-<h3 id="org3fab12b">파일 개수</h3>
-<div class="outline-text-3" id="text-org3fab12b">
+<div id="outline-container-orgda73194" class="outline-3">
+<h3 id="orgda73194">파일 개수</h3>
+<div class="outline-text-3" id="text-orgda73194">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #dcaeea;">COUNT</span>=$<span style="color: #51afef;">(</span><span style="color: #ECBE7B;">ls</span> /foo/bar | wc -l<span style="color: #51afef;">)</span>
 </pre>
@@ -273,9 +275,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org5f85e2d" class="outline-3">
-<h3 id="org5f85e2d">와일드카드 인자 처리</h3>
-<div class="outline-text-3" id="text-org5f85e2d">
+<div id="outline-container-org0083710" class="outline-3">
+<h3 id="org0083710">와일드카드 인자 처리</h3>
+<div class="outline-text-3" id="text-org0083710">
 <p>
 셸 스크립트에 <code>*.ext</code> 같은 파일 이름 와일드카드를 넘겼을 때
 이를 나열하는 방법을 for 커맨드로 표현하면 이렇다.
@@ -293,9 +295,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-orgd47aafd" class="outline-3">
-<h3 id="orgd47aafd">에러가 나면 멈추게 하기</h3>
-<div class="outline-text-3" id="text-orgd47aafd">
+<div id="outline-container-orgebd9b1e" class="outline-3">
+<h3 id="orgebd9b1e">에러가 나면 멈추게 하기</h3>
+<div class="outline-text-3" id="text-orgebd9b1e">
 <p>
 셸 스크립트 상단에 아래 한 줄을 넣어두면 에러가 났을 때 스크립트가 멈춘다.
 </p>
@@ -305,9 +307,9 @@ than, greater than or equal, less than, less than or equal</li>
 </div>
 </div>
 </div>
-<div id="outline-container-orgd5bb474" class="outline-3">
-<h3 id="orgd5bb474">에러 메시지 숨기기</h3>
-<div class="outline-text-3" id="text-orgd5bb474">
+<div id="outline-container-org42282a9" class="outline-3">
+<h3 id="org42282a9">에러 메시지 숨기기</h3>
+<div class="outline-text-3" id="text-org42282a9">
 <p>
 에러 메시지는 <code>stderr</code> (2) 파이프로 전달되니 이것을 지옥의 쓰레기통(?)에 던지면 된다.
 </p>
